# ai-interview-system

./: .gitignore  main.py  pyproject.toml  test.py
ai_interview_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chroma/: chroma.sqlite3
config/: config.yaml  data_sources.yaml
docs/: architecture(v1).md  architecture(v2).md  implementation_status.md  planning.md  risk_analysis.md
notebooks/: collect_data.ipynb
scripts/: __init__.py  collect_github_data.py  collect_interview_questions.py  collect_wikipedia_concepts.py  data_validation.py  generate_rubrics.py  ingest_data_to_chromadb.py  parser_csv_kaggle_data.py
src/ai_interview_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: database.py  embeddings.py  vector_store.py
src/rag/: agentic_rag.py  cache.py  grader.py  models.py  query_refiner.py  retriever.py
src/services/: memory_service.py
src/utils/: config.py  llm_factory.py  logging_config.py
tests/: conftest.py
tests/integration_tests/: test_retrieval_quality.py
tests/test_rag/: test_cache.py
tests/unit_tests/: test_data_ingestion.py  test_database.py  test_embedding_service.py  test_memory_service.py  test_retriever.py  test_vectorstore.py
