[project]
name = "ai-interview-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.6",
    "mlflow>=3.8.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "kagglehub>=0.4.0"

]

[tool.black]
line-length = 88
target-version = ["py311"]
